--- a/src/main/resources/templates/front/adjust.html
+++ b/src/main/resources/templates/front/adjust.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:include="include :: head('做题吧 - 修改密码')"></head>
-<body>
+<body style="overflow:hidden;">
 <div class="layui-container index-body">
     <div class="layui-row layui-form">
         <div class="layui-form-item">
