--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:include="include :: head('登录')"></head>
-<link rel="stylesheet" type="text/css" th:href="@{/css/login.css}" />
-<body style="background-image: url("/static/images/loginbg.jpg");">
+<link rel="stylesheet" type="text/css" th:href="@{/css/login.css}"/>
+<body th:style="|background-image: url('@{/images/loginbg.jpg}');|">
 <div class="lay-user-login-top lay-user-display-show" id="lay-user-login" style="display: none;">
     <div class="lay-user-login-main">
         <div class="lay-user-login-box lay-user-login-header">
@@ -25,14 +25,14 @@
                         <input type="text" name="captcha" id="lay-login-captcha" lay-verify="required" placeholder="验证码" class="layui-input"/>
                     </div>
                     <div class="layui-col-xs5">
-                        <img th:src="@{/captcha}" class="lay-user-login-codeimg" id="lay-get-captcha" />
+                        <img th:src="@{/captcha}" class="lay-user-login-codeimg" id="lay-get-captcha"/>
                     </div>
                 </div>
             </div>
             <div class="layui-form-item">
                 <div class="layui-row">
                     <div class="layui-col-xs7">
-                        <input type="checkbox" name="remember" value="on" lay-skin="primary" class="lay-fff" title="记住密码" />
+                        <input type="checkbox" name="remember" value="on" lay-skin="primary" class="lay-fff" title="记住密码"/>
                     </div>
                     <div class="layui-col-xs5">
                         <a href="logon.html" lay-skin="primary">用户注册</a>
@@ -41,13 +41,13 @@
             </div>
             <div class="layui-form-item">
                 <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="lay_login_submit">登 入</button>
-                <input type="hidden" id="tips" th:value="${tips}" />
+                <input type="hidden" id="tips" th:value="${tips}"/>
             </div>
         </form>
     </div>
 </div>
 <script>
-    document.querySelector("#lay-get-captcha").addEventListener("click", function() {
+    document.querySelector("#lay-get-captcha").addEventListener("click", function () {
         this.src = "/captcha?p=" + Math.random();
     });
     layui.use(['jquery', 'form', 'layer'], function ($, form, layer) {
@@ -62,7 +62,7 @@
         //提交
         form.on('submit(lay_login_submit)', function (data) {
             form.verify({
-                pass: [ /^[\S]{5,12}$/, '密码必须5到12位，且不能出现空格' ]
+                pass: [/^[\S]{5,12}$/, '密码必须5到12位，且不能出现空格']
             });
         });
         var errorMsg = $("#tips").val();
