--- a/src/main/resources/templates/front/login.html
+++ b/src/main/resources/templates/front/login.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:include="include :: head('做题吧 - 首页')"></head>
 <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}" />
-<body>
+<body style="overflow:hidden;">
 <div class="layui-container index-body lay-user-display-show" id="lay-user-login">
     <div class="lay-user-login-main">
         <div class="lay-user-login-box lay-user-login-body layui-form">
