--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -10,43 +10,15 @@
     <link rel="Bookmark" th:href="@{/favicon.ico}"/>
     <link rel="Shortcut Icon" th:href="@{/favicon.ico}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/layui.css}" media="all"/>
-    <link rel="stylesheet" type="text/css" th:unless="${#request.servletPath.startsWith('/admin')}"
-          th:href="@{/css/index.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/index.css}" th:unless="${#request.servletPath.startsWith('/admin')}"/>
     <script type="text/javascript" th:src="@{/js/layui.js}"></script>
     <!--[if lt IE 9]>
     <script type="text/javascript" th:src="@{/js/html5shiv.js}"></script>
     <script type="text/javascript" th:src="@{/js/respond.min.js}"></script><![endif]--><!--[if IE 6]>
     <script type="text/javascript" th:src="@{/js/DD_belatedPNG_0.0.8a-min.js}"></script>
-    <script>DD_belatedPNG.fix('*');</script><![endif]-->
-    <script type="text/javascript" th:if="${#request.servletPath.startsWith('/admin')}"
-            th:src="@{/js/lay-config.js}"></script>
+    <script type="text/javascript">DD_belatedPNG.fix('*');</script><![endif]-->
+    <script type="text/javascript" th:src="@{/js/lay-config.js}" th:if="${#request.servletPath.startsWith('/admin')}"></script>
     <script type="text/javascript" th:unless="${#request.servletPath.startsWith('/admin')}">
-        function layPage(id, count, curr, limit) {
-            layui.laypage.render({
-                elem: id,
-                count: count,
-                curr: curr || 1,
-                limit: limit || 12,
-                theme: '#B55AD0',
-                first: '首页',
-                last: '尾页',
-                prev: '<em>←</em>',
-                next: '<em>→</em>',
-                jump: function (obj, first) {
-                    if (!first) {
-                        console.log(window.location.pathname)
-                        // window.location.href = window.location.pathname
-                    }
-                }
-            });
-        }
-
-        function layOpen(title, url, lo_w, lo_h) {
-            lo_w = typeof lo_w === 'undefined' ? '50%' : lo_w;
-            lo_h = typeof lo_h === 'undefined' ? '50%' : lo_h;
-            layer.open({type: 2, title: title, area: [lo_w, lo_h], shade: 0.8, content: url});
-        }
-
         layui.use(['jquery', 'element', 'form', 'carousel', 'dropdown'], function ($, element, form, carousel, dropdown) {
             var pageMap = {
                 '/': 'home', '/index': 'home', '/index.html': 'home',
@@ -79,16 +51,42 @@
                 indicator: 'outside'
             });
 
+            function layPage(id, count, curr, limit) {
+                layui.laypage.render({
+                    elem: id,
+                    count: count,
+                    curr: curr || 1,
+                    limit: limit || 12,
+                    theme: '#B55AD0',
+                    first: '首页',
+                    last: '尾页',
+                    prev: '<em>←</em>',
+                    next: '<em>→</em>',
+                    jump: function (obj, first) {
+                        if (!first) {
+                            console.log(window.location.pathname)
+                            // window.location.href = window.location.pathname
+                        }
+                    }
+                });
+            }
+
+            function layOpen(title, url, lo_w, lo_h) {
+                lo_w = typeof lo_w === 'undefined' ? '50%' : lo_w;
+                lo_h = typeof lo_h === 'undefined' ? '50%' : lo_h;
+                layer.open({type: 2, title: title, area: [lo_w, lo_h], content: url, shade: 0.8});
+            }
+
             // 初始化栏目
             function layDrop(clazz, datas, url) {
                 dropdown.render({
-                    elem: clazz, trigger: 'hover', data: datas || [],
-                    click: function (data, othis, event) {
+                    elem: clazz, trigger: 'hover', data: datas || [], click: function (data, othis, event) {
                         window.location.href = url + data.id;
                     }
                 });
             }
 
+            // 学科初始化
             $.get('/subjects', function (res) {
                 layDrop('.LAY_TRIGGER', res.data, "/rooms?sid=");
                 layDrop('.LAY_TRIG', res.data, "/learns?sid=");
@@ -121,6 +119,15 @@
                         break;
                 }
             });
+
+            $(".mobile-header-more").on("click", function () {
+                $("body").addClass("mobile-nav-show").css("overflow", "hidden");
+                $("#mobile-menu").removeClass('layui-icon-spread-left').addClass('layui-icon-shrink-right');
+            })
+            $(".mobile-shade").click(function () {
+                $("body").removeClass("mobile-nav-show").css("overflow", "auto");
+                $("#mobile-menu").removeClass('layui-icon-shrink-right').addClass('layui-icon-spread-left');
+            });
         });
     </script>
 </head>
@@ -141,13 +148,13 @@
                 <a><cite>首页</cite></a>
             </span>
         </ul>
-        <ul class="layui-nav layui-layout-right">
-            <li class="layui-nav-item layui-hide-xs" lay-unselect>
+        <ul class="layui-nav layui-layout-right" lay-unselect>
+            <li class="layui-nav-item">
                 <a href="/" target="_blank" title="文档说明">
                     <i class="layui-icon layui-icon-website"></i>
                 </a>
             </li>
-            <li class="layui-nav-item layui-hide-xs" lay-unselect>
+            <li class="layui-nav-item">
                 <a id="layFull" lay-event="screenLayFull" lay-full="full" title="全屏">
                     <i class="layui-icon layui-icon-screen-full"></i>
                 </a>
@@ -158,10 +165,10 @@
                     <cite th:text="${session?.username?:'用户'}"></cite>
                 </a>
                 <dl class="layui-nav-child">
-                    <dd lay-unselect><a lay-event="profile">基本资料</a></dd>
-                    <dd lay-unselect><a lay-event="editPwd">修改密码</a></dd>
+                    <dd><a lay-event="profile">基本资料</a></dd>
+                    <dd><a lay-event="editPwd">修改密码</a></dd>
                     <hr>
-                    <dd lay-unselect><a th:href="@{/logout}">退出</a></dd>
+                    <dd><a th:href="@{/logout}">退出</a></dd>
                 </dl>
             </li>
         </ul>
@@ -171,63 +178,64 @@
 <!-- 尾部信息 -->
 <div th:fragment="footer">
     <div class="layui-footer">
-        <p>© 2025 <a href="#" target="_blank" style="color: #3498db; text-decoration: none;">做题吧</a> 版权所有 |
-            冀ICP备12345678号</p>
+        <p>© 2025 <a href="#" target="_blank" style="color: #3498db;">做题吧</a> 版权所有 | 冀ICP备12345678号</p>
     </div>
     <!-- 移动端遮罩 -->
     <div class="site-mobile-shade"></div>
 </div>
 
 <div th:fragment="f_header">
-    <div class="layui-header" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
-        <div id="mainNav" class="layui-container layui-row" style="margin-bottom: 20px;">
-            <div class="layui-logo" style="color: #fff; font-size: 22px;">
-                <img th:src="@{/images/logo.png}" alt="logo"/>
-                <cite>做题吧</cite>
+    <div id="mainNav" class="layui-header">
+        <div class="layui-container">
+            <div class="mobile-logo"><img th:src="@{/images/logo.png}" alt="logo"/> 做题吧</div>
+            <div class="mobile-header-more">
+                <i id="mobile-menu" class="layui-icon layui-icon-spread-left"></i>
             </div>
-            <ul class="layui-nav layui-layout-left" style="background: transparent;">
-                <li class="layui-nav-item" data-page="home">
-                    <a href="/">首页</a>
-                </li>
-                <li class="layui-nav-item LAY_TRIGGER" data-page="rooms">
-                    <a href="/rooms">课程中心 <i class="layui-icon">&#xe61a;</i></a>
-                </li>
-                <li class="layui-nav-item LAY_TRIG" data-page="learns">
-                    <a href="/learns">知识库 <i class="layui-icon">&#xe61a;</i></a>
-                </li>
-                <li class="layui-nav-item" data-page="comments">
-                    <a href="/comment">问答社区</a>
-                </li>
-                <li class="layui-nav-item" data-page="tools">
-                    <a href="/tools">常用工具</a>
-                </li>
-            </ul>
-            <ul class="layui-nav layui-layout-right" style="background: transparent;">
-                <li class="layui-nav-item" data-page="users" th:if="${session?.username!= null}">
-                    <a>
-                        <img th:src="@{/images/logo.png}" class="layui-nav-img" alt="头像">
-                        <cite th:text="${session?.username?:'用户'}"></cite>
-                    </a>
-                    <dl class="layui-nav-child">
-                        <dd lay-unselect>
-                            <a th:href="@{/user/answers}" lay-event="userAns"><i class="layui-icon">&#xe705;</i> 我的答题室</a>
-                        </dd>
-                        <dd lay-unselect>
-                            <a href="javascript:;" lay-event="userInfo"><i class="layui-icon">&#xe66f;</i> 基本资料</a>
-                        </dd>
-                        <dd lay-unselect>
-                            <a href="javascript:;" lay-event="userPwd"><i class="layui-icon">&#xe673;</i> 修改密码</a>
-                        </dd>
-                        <hr>
-                        <dd lay-unselect><a th:href="@{/logout}"><i class="layui-icon">&#xe682;</i> 退出</a></dd>
-                    </dl>
-                </li>
-                <li class="layui-nav-item" th:unless="${session?.username!= null}">
-                    <a lay-event="login" href="javascript:;" style="color: #fff;">
-                        <i class="layui-icon layui-icon-username"></i> 登录
-                    </a>
-                </li>
-            </ul>
+            <div class="mobile-header-menu">
+                <ul class="layui-nav" id="LAY_NAV_TOP" lay-nav-id="LAY_NAV_TOP">
+                    <li class="layui-nav-item" data-page="home">
+                        <a href="/">首页</a>
+                    </li>
+                    <li class="layui-nav-item LAY_TRIGGER" data-page="rooms">
+                        <a href="/rooms">课程中心 <i class="layui-icon">&#xe61a;</i></a>
+                    </li>
+                    <li class="layui-nav-item LAY_TRIG" data-page="learns">
+                        <a href="/learns">知识库 <i class="layui-icon">&#xe61a;</i></a>
+                    </li>
+                    <li class="layui-nav-item" data-page="comments">
+                        <a href="/comment">问答社区</a>
+                    </li>
+                    <li class="layui-nav-item" data-page="tools">
+                        <a href="/tools">常用工具</a>
+                    </li>
+                    <li class="layui-nav-item layui-layout-right" th:unless="${session?.username!= null}">
+                        <a lay-event="login" href="javascript:;" style="color: #fff;">
+                            <i class="layui-icon layui-icon-username"></i> 登录
+                        </a>
+                    </li>
+                </ul>
+                <ul class="layui-nav layui-layout-right" th:if="${session?.username!= null}">
+                    <li class="layui-nav-item" data-page="users">
+                        <a href="javascript:;">
+                            <img th:src="@{/images/logo.png}" class="layui-nav-img" alt="头像">
+                            <cite th:text="${session?.username?:'用户'}"></cite>
+                        </a>
+                        <dl class="layui-nav-child">
+                            <dd>
+                                <a th:href="@{/user/answers}" lay-event="userAns"><i class="layui-icon">&#xe705;</i> 我的答题室</a>
+                            </dd>
+                            <dd>
+                                <a href="javascript:;" lay-event="userInfo"><i class="layui-icon">&#xe66f;</i> 基本资料</a>
+                            </dd>
+                            <dd>
+                                <a href="javascript:;" lay-event="userPwd"><i class="layui-icon">&#xe673;</i> 修改密码</a>
+                            </dd>
+                            <hr>
+                            <dd><a th:href="@{/logout}"><i class="layui-icon">&#xe682;</i> 退出</a></dd>
+                        </dl>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
@@ -272,6 +280,6 @@
             <th:block th:include="include :: footer"></th:block>
         </div>
     </div>
-    <div class="site-mobile-shade" th:alt="移动端遮罩"></div>
+    <div class="mobile-shade" th:alt="移动端遮罩"></div>
 </div>
 </html>
